--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,27 @@
 		    <scope>system</scope>
 		    <systemPath>${project.basedir}/lib/ais-lib-communication-2.0-SNAPSHOT.jar</systemPath>
 		</dependency>
+		<dependency>
+		    <groupId>dk.dma.ais.lib</groupId>
+		    <artifactId>ais-lib-messages</artifactId>
+		    <version>2.0-SNAPSHOT</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/ais-lib-messages-2.0-SNAPSHOT.jar</systemPath>
+		</dependency>
+	    <dependency>
+			<groupId>dk.dma.enav-model</groupId>
+			<artifactId>enav-model</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/enav-model-0.1-SNAPSHOT.jar</systemPath>
+	    </dependency>
+	    <dependency>
+			<groupId>dk.dma.enav-util</groupId>
+			<artifactId>enav-util</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/enav-util-0.1-SNAPSHOT.jar</systemPath>
+	    </dependency>
 	</dependencies>
 
 	<build>
