changed adapter definition to xml and corrected wrong ns in xml

--- a/ais-adapter/pom.xml
+++ b/ais-adapter/pom.xml
@@ -34,7 +34,7 @@
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<AGES-Domain>com.esri.geoevent.adapter</AGES-Domain>
 						<Export-Package />
-						<Private-Package>com.esri.geoevent.adapter.twitter</Private-Package>
+						<Private-Package>dk.informi.geoevent.ais</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
