--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 		    <scope>system</scope>
 		    <systemPath>${project.basedir}/lib/ais-lib-messages-2.0-SNAPSHOT.jar</systemPath>
 		</dependency>
+                <dependency>
+		    <groupId>dk.dma.ais.lib</groupId>
+		    <artifactId>ais-lib-utils</artifactId>
+		    <version>2.0-SNAPSHOT</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/ais-lib-utils-2.0-SNAPSHOT.jar</systemPath>
+		</dependency>
 	    <dependency>
 			<groupId>dk.dma.enav-model</groupId>
 			<artifactId>enav-model</artifactId>
