--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/enav-util-0.1-SNAPSHOT.jar</systemPath>
 	    </dependency>
+            <dependency>
+                    <groupId>dk.dma.commons</groupId>
+                    <artifactId>dma-commons-app</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                    <scope>system</scope>
+            <systemPath>${project.basedir}/lib/dma-commons-util-0.1-SNAPSHOT.jar</systemPath>
+            </dependency>
 	</dependencies>
 
 	<build>
