creating an inputStream from ByteBuffer instead of using a byte array

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 	    </dependency>
             <dependency>
                     <groupId>dk.dma.commons</groupId>
-                    <artifactId>dma-commons-app</artifactId>
+                    <artifactId>dma-commons-util</artifactId>
                     <version>0.1-SNAPSHOT</version>
                     <scope>system</scope>
             <systemPath>${project.basedir}/lib/dma-commons-util-0.1-SNAPSHOT.jar</systemPath>
